# webcrawl-mcp

./: .dockerignore  CHANGELOG.md  Dockerfile  glama.json  pyproject.toml
.github/workflows/: ci.yml
src/webcrawl_mcp/: crawler.py  rate_limiter.py  scraper.py  search.py  server.py
tests/: test_rate_limiter.py  test_scraper.py
